--- a/app/config/config.json
+++ b/app/config/config.json
@@ -1,16 +1,16 @@
 {
     "debug":true,
     "server":{
-        "address":":8000"
+        "address":"localhost:8000"
     },
     "context":{
         "timeout":2
     },
     "database":{
-        "host": "localhost",
+        "host":"localhost",
         "port":"3306",
         "user":"root",
-        "password":"",
+        "password":"rahmanwghazi",
         "name":"monefy"
     },
     "jwt":{
