--- a/.github/workflows/on_push_main.yaml
+++ b/.github/workflows/on_push_main.yaml
@@ -3,11 +3,10 @@ name: on-push-dev
 on:
   pull_request:
     branches:
-      - 'dev'
+      - 'main'
   push:
     branches:
-      - 'dev'
-      - 'feature/*'
+      - 'main'
 
 jobs:
   api-test:
